text and image alignment fixed

--- a/index.css
+++ b/index.css
@@ -24,7 +24,7 @@ body {
 .wrapper > div {
   background: #944;
   padding: 0.5rem;
-  display: grid;
+  display: table;
   width: auto;
 
 }
@@ -37,10 +37,7 @@ body {
 
 .nestedText {
 
-  grid-template-columns:repeat(3, 5fr);
-  grid-auto-rows: fill;
-  grid-gap: 1em;
-  display: cover;
+
 }
 .nestedTitle {
   font-size: 60px;
@@ -63,6 +60,10 @@ body {
   text-shadow: 3px, #333;
   display: center;
   font-family: Rubik;
+  grid-template-columns:repeat(3, 5fr);
+  grid-auto-rows: fill;
+  grid-gap: 1em;
+  display: cover;
 }
 .photos {
   width: 100%;;
@@ -128,11 +129,21 @@ padding-right: 150px;
 
 
 }
-#history {
+#HISTORY {
+  width: 100%;
+  height: 100vh;
+  display: table;
+  overflow-y: scroll;
+  margin-top: 10%;
 
 }
 
-#culture {
+#CULTURE {
+  width: 100%;
+  height: 100vh;
+  display: table;
+  overflow-y: scroll;
+  margin-top: 10%;
 
 }
 #bkgdLandingPage {
